# kuka_experimental

kuka_kr10_support/urdf/: kr10r1440_2_macro.xacro
kuka_kr150_support/meshes/kr150_r3100-2/visual/: base_link.stl  link_2.stl  link_4.stl  link_5.stl  link_6.stl
kuka_kr22_support/: package.xml
kuka_kr22_support/config/: opw_parameters_kr22r1610_2.yaml
kuka_kr22_support/urdf/: kr22r1610_2_macro.xacro
kuka_kr4_support/urdf/: kr4r600_macro.xacro
kuka_kr60_support/: CMakeLists.txt  package.xml
kuka_kr60_support/launch/: view_urdf.launch.py
kuka_kr60_support/urdf/: kr60.ros2_control.xacro  kr60ha_macro.xacro
kuka_kr6_support/: CMakeLists.txt  package.xml
kuka_kr6_support/config/: opw_parameters_kr6r1820.yaml  opw_parameters_kr6r900sixx.yaml
kuka_kr6_support/launch/: load_kr6r900_2.launch
kuka_kr6_support/urdf/: kr6r900_2_macro.xacro
kuka_resources/: CMakeLists.txt  package.xml
kuka_rsi_hw_interface/: CMakeLists.txt  hardware_interface_plugin.xml  kuka_rsi_hw_interface.xml  package.xml
kuka_rsi_hw_interface/include/kuka_rsi_hw_interface/: kuka_hardware_interface.h  kuka_hardware_interface.hpp
kuka_rsi_hw_interface/krl/KR_C4/: README.md  ros_rsi.rsi.xml  ros_rsi.src  ros_rsi_ethernet.xml
kuka_rsi_hw_interface/src/: kuka_hardware_interface.cpp
kuka_rsi_simulator/scripts/: kuka_rsi_simulator
