<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_kr60_support</name>
  <version>0.0.1</version>
  <description>
    <p>
      ROS-Industrial support for the KUKA KR 60 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for KUKA KR 60 manipulators. This currently includes the KR 60 HA only.
    </p>
    <p><b>Specifications</b>:</p>
    <ul>
      <li>KR 60 HA - Default</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information
      found in KUKA KR 30, 60 HA with C Variants Specification (V3, 2020-08-17).
      All urdfs are based on the default motion and joint velocity limits,
      unless noted otherwise.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author email="simon.schmeisser@optonic.com">Simon Schmeisser (Optonic)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/kuka_kr60_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/kuka_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/kuka_experimental</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>kuka_resources</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
