<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_kr6_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the KUKA KR 6 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for KUKA KR 6 manipulators. This currently includes the R700 sixx,
      the R900 sixx and the R900-2.
    </p>
    <p><b>Specifications</b>:</p>
    <ul>
      <li>KR 6 R700 sixx - Default</li>
      <li>KR 6 R900 sixx - Default</li>
      <li>KR 6 R900-2 - Default</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities for sixx models are based on the information
      in the <em>KUKA Roboter GmbH - KR AGILUS sixx - With W and C Variants -
      Specification</em> version <em>Spez KR AGILUS sixx V12, 26.03.2015</em>.
      Joint limits and maximum joint velocities for R900-2 are based on the information
      in the <em>KUKA Deutschland GmbH - Robots KR AGILUS-2 Specification</em> version <em>V4, 26.02.2019</em>.
      All urdfs are based on the default motion and joint velocity limits,
      unless noted otherwise (ie: no support for high speed joints,
      extended / limited motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
    <p>
      Note: the KR6 R900-2 urdf reuses meshes from the <em>kuka_kr10_support</em> package because of their identical appearance.
    </p>
  </description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <author>Brett Hemes (3M)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/kuka_kr6_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/kuka_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/kuka_experimental</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>kuka_resources</build_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
