<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_rsi_hw_interface</name>
  <version>0.1.0</version>
  <description>A ROS-Control hardware interface for use with KUKA RSI</description>
  <author>Lars Tingelstad</author>
  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/kuka_rsi_hw_interface</url>
  <url type="bugtracker">https://github.com/ros-industrial/kuka_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/kuka_experimental</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>hardware_interface</buildtool_depend>
  <buildtool_depend>pluginlib</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>urdf</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_manager</depend>
  <depend>realtime_tools</depend>
</package>
